--- a/client/src/client/app/dashboard/dashboard.html
+++ b/client/src/client/app/dashboard/dashboard.html
@@ -2,50 +2,26 @@
   <section class="matter">
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <ul class="today-datas">
-            <li class="blightblue">
-              <div class="pull-left"><i class="fa fa-plane"></i></div>
-              <div class="datas-text pull-right">
-                <span class="bold">May 18 - 19, 2015</span> Castle Resort, Neverland
-              </div>
-              <div class="clearfix"></div>
-            </li>
-
-            <li class="borange">
-              <div class="pull-left"><i class="fa fa-envelope"></i></div>
-              <div class="datas-text pull-right">
-                <span class="bold">{{vm.messageCount}}</span> Messages
-              </div>
-              <div class="clearfix"></div>
-            </li>
-
-          </ul>
-        </div>
-      </div>
-      <div class="row">
         <div class="col-md-6">
-          <div class="widget wviolet">
-            <div ht-widget-header title="People" allow-collapse="true"></div>
+          <div class="widget wgreen">
+            <div ht-widget-header title="Open Tasks" allow-collapse="true"></div>
             <div class="widget-content text-center text-info">
-              <table class="table table-condensed table-striped">
-                <thead>
-                  <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Age</th>
-                    <th>Location</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr ng-repeat="p in vm.people">
-                    <td>{{p.firstName}}</td>
-                    <td>{{p.lastName}}</td>
-                    <td>{{p.age}}</td>
-                    <td>{{p.location}}</td>
-                  </tr>
-                </tbody>
-              </table>
+              <div class="task">
+                <ul class="details">
+                  <li class="title">My ToDo Task</li>
+                  <li class="description">This is the description of the task.</li>
+                  <li class="author">Daniel Zamorano</li>
+                </ul>
+                <i class="fa fa-times" aria-hidden="true"></i>
+              </div>
+              <div class="task">
+                <ul class="details">
+                  <li class="title">My ToDo Task</li>
+                  <li class="description">This is the description of the task.</li>
+                  <li class="author">Daniel Zamorano</li>
+                </ul>
+                <i class="fa fa-times" aria-hidden="true"></i>
+              </div>
             </div>
             <div class="widget-foot">
               <div class="clearfix"></div>
@@ -53,10 +29,25 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div class="widget wgreen">
-            <div ht-widget-header title="{{vm.news.title}}" allow-collapse="true"></div>
+          <div class="widget wviolet">
+            <div ht-widget-header title="Closed Tasks" allow-collapse="true"></div>
             <div class="widget-content text-center text-info">
-              <small>{{vm.news.description}}</small>
+              <div class="task">
+                <ul class="details">
+                  <li class="title">My ToDo Task</li>
+                  <li class="description">This is the description of the task.</li>
+                  <li class="author">Daniel Zamorano</li>
+                </ul>
+                <i class="fa fa-times" aria-hidden="true"></i>
+              </div>
+              <div class="task">
+                <ul class="details">
+                  <li class="title">My ToDo Task</li>
+                  <li class="description">This is the description of the task.</li>
+                  <li class="author">Daniel Zamorano</li>
+                </ul>
+                <i class="fa fa-times" aria-hidden="true"></i>
+              </div>
             </div>
             <div class="widget-foot">
               <div class="clearfix"></div>
