--- a/client/src/client/index.html
+++ b/client/src/client/index.html
@@ -25,6 +25,8 @@
   <!-- endbower -->
   <!-- endbuild -->
 
+  <link href="https://fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet">
+
   <!-- build:css styles/app.css -->
   <!-- inject:css -->
   <link rel="stylesheet" href="/.tmp/styles.css">
