--- a/client/src/client/app/dashboard/dashboard.html
+++ b/client/src/client/app/dashboard/dashboard.html
@@ -8,7 +8,7 @@
             <div ht-widget-header title="In Progress" allow-collapse="true"></div>
             <div class="widget-content text-center text-info">
               <!-- tasks -->
-              <div class="task" ng-repeat="task in vm.tasks">
+              <div class="task" ng-repeat="task in vm.tasks.open">
                 <ul class="details">
                   <li class="title">{{task.title}}</li>
                   <li class="description">{{task.description}}</li>
@@ -29,7 +29,7 @@
             <div ht-widget-header title="Completed" allow-collapse="true"></div>
             <div class="widget-content text-center text-info">
               <!-- tasks -->
-              <div class="task" ng-repeat="task in vm.tasks">
+              <div class="task" ng-repeat="task in vm.tasks.closed">
                 <ul class="details">
                   <li class="title">{{task.title}}</li>
                   <li class="description">{{task.description}}</li>
