--- a/client/src/client/specs.html
+++ b/client/src/client/specs.html
@@ -71,6 +71,7 @@
   <script src="/src/client/app/core/core.module.js"></script>
   <script src="/src/client/app/dashboard/dashboard.module.js"></script>
   <script src="/src/client/app/layout/layout.module.js"></script>
+  <script src="/src/client/app/login/login.module.js"></script>
   <script src="/src/client/app/widgets/widgets.module.js"></script>
   <script src="/src/client/app/blocks/exception/exception-handler.provider.js"></script>
   <script src="/src/client/app/blocks/exception/exception.js"></script>
@@ -86,6 +87,8 @@
   <script src="/src/client/app/layout/ht-top-nav.directive.js"></script>
   <script src="/src/client/app/layout/shell.controller.js"></script>
   <script src="/src/client/app/layout/sidebar.controller.js"></script>
+  <script src="/src/client/app/login/login.controller.js"></script>
+  <script src="/src/client/app/login/login.route.js"></script>
   <script src="/src/client/app/widgets/ht-img-person.directive.js"></script>
   <script src="/src/client/app/widgets/ht-widget-header.directive.js"></script>
   <!-- endinject -->
@@ -102,6 +105,8 @@
   <script src="/src/client/app/layout/ht-sidebar.directive.spec.js"></script>
   <script src="/src/client/app/layout/shell.controller.spec.js"></script>
   <script src="/src/client/app/layout/sidebar.controller.spec.js"></script>
+  <script src="/src/client/app/login/login.controller.spec.js"></script>
+  <script src="/src/client/app/login/login.route.spec.js"></script>
   <!-- endinject -->
 
   <!-- inject:templates:js -->
