--- a/client/src/client/app/login/login.html
+++ b/client/src/client/app/login/login.html
@@ -3,18 +3,25 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
+          <p ng-if="vm.bigError" class="big-error">{{vm.bigError}}</p>
           <h1> Login </h1>
+          <div ng-if="vm.error" class="alert alert-danger alert-dismissible" role="alert">
+            <button ng-click="vm.cleanErrors()" type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <strong>Error!</strong> {{vm.error}}
+          </div>
           <div class="login-box">
             <form>
               <div class="form-group">
                 <label for="user">User</label>
-                <input type="text" class="form-control" name="user" id="user">
+                <input ng-model="vm.loginData.username" type="text" class="form-control" name="user" id="user">
               </div>
               <div class="form-group">
                   <label for="password">Password</label>
-                  <input type="password" class="form-control" id="password" placeholder="Password">
+                  <input ng-model="vm.loginData.password" type="password" class="form-control" id="password" placeholder="Password">
               </div>
-              <button type="button" name="login" class="btn btn-primary"> Login </button>
+              <button ng-click="vm.login()" type="button" name="login" class="btn btn-primary"> Login </button>
             </form>
           </div>
         </div>
