--- a/client/src/client/index.html
+++ b/client/src/client/index.html
@@ -52,6 +52,7 @@
   <script src="/bower_components/toastr/toastr.js"></script>
   <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="/bower_components/angular-md5/angular-md5.js"></script>
+  <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
