--- a/client/src/client/specs.html
+++ b/client/src/client/specs.html
@@ -57,6 +57,8 @@
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="/bower_components/toastr/toastr.js"></script>
   <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="/bower_components/angular-md5/angular-md5.js"></script>
+  <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
   <script src="/bower_components/angular-mocks/angular-mocks.js"></script>
   <script src="/bower_components/sinon/index.js"></script>
   <script src="/bower_components/bardjs/dist/bard.js"></script>
@@ -77,6 +79,7 @@
   <script src="/src/client/app/blocks/exception/exception.js"></script>
   <script src="/src/client/app/blocks/logger/logger.js"></script>
   <script src="/src/client/app/blocks/router/router-helper.provider.js"></script>
+  <script src="/src/client/app/core/authentication-service.js"></script>
   <script src="/src/client/app/core/config.js"></script>
   <script src="/src/client/app/core/constants.js"></script>
   <script src="/src/client/app/core/core.route.js"></script>
