polish styles and function in dashboard.

--- a/client/src/client/app/dashboard/dashboard.html
+++ b/client/src/client/app/dashboard/dashboard.html
@@ -70,7 +70,7 @@
 
                   <div class="buttons">
                     <button class="btn btn-danger" type="button" name="cancel"
-                      ng-click="vm.toggleEditForm(task._id)">Cancel</button>
+                      ng-click="vm.toggleEditForm(task)">Cancel</button>
                     <button class="btn btn-primary" type="button" name="save"
                       ng-click="vm.updateTask(task)"> Save </button>
                   </div>
